# quadra

./: DedicatedServerDocumentation.md  ProjectHome.md  Quagmire.mk  ReleaseProcess.md  UpdateQserv.md  configure.ac  version.txt
branches/quadra-quagmire/: Quagmire.mk  configure.ac
qserv/: app.yaml  importscores.py  main.py  models.py  qserv.py
quadra/: Makefile
quadra-www/htdocs/: dedicated.txt  index.html
quadra/skelton/: Makefile
quadra/skelton/svgalib/: vars.mk
skelton/tools/wadder/: wadder.cpp
tags/quadra-1.1.6/quadra/config/: vars.mk
trunk/qserv/: importscores.py  main.py  models.py  qserv.py
trunk/quadra-www/htdocs/: index.html  style.css
trunk/quadra-www/htdocs/qserv/: index.php
trunk/quadra/skelton/config/: compiler.mk
wiki/: DedicatedServerDocumentation.wiki  ReleaseProcess.wiki  UpdateQserv.wiki
